类组件中的状态数据传递

--- a/exercise-1/index.html
+++ b/exercise-1/index.html
@@ -32,9 +32,18 @@
 
         //类组件
         class App2 extends React.Component{
+            constructor (){
+                super()
+                this.state = {
+                    a: 1
+                }
+            }
             render(){
                 return (
-                    <h1>我是类组件</h1>
+                    <h1>
+                    我是类组件 
+                    {this.state.a}
+                    </h1>
                 )
             }
         }
