组建通信-父给子

--- a/组建通信-龟兔赛跑/index.html
+++ b/组建通信-龟兔赛跑/index.html
@@ -43,7 +43,7 @@
             render(){
                 return (
                     <div>
-                        <div style={this.state.style}>
+                        <div>
                             <Time1 result={this.state.result1} />
                             <Track1 success={this.success1.bind(this)} />
                             <Time2 result={this.state.result2} />
